added README and docker-entrypoint

--- a/labdocker/centos7-jdk-8u45/Dockerfile
+++ b/labdocker/centos7-jdk-8u45/Dockerfile
@@ -7,4 +7,6 @@ RUN wget --no-check-certificate --no-cookies --header "Cookie: oraclelicense=acc
 RUN rpm -Uvh jdk-8u45-linux-x64.rpm
 RUN rm -f /root/jdk-8u45-linux-x64.rpm
 
+COPY docker-entrypoint.sh /
+ENTRYPOINT ["/docker-entrypoint.sh"]
 
