--- a/blog/httpd/conf.d/mod_security.conf
+++ b/blog/httpd/conf.d/mod_security.conf
@@ -4,8 +4,8 @@
 	IncludeOptional modsecurity.d/activated_rules/*.conf
     
     # Default recommended configuration
-    #SecRuleEngine On
-    SecRuleEngine Off
+    SecRuleEngine On
+    #SecRuleEngine Off
     SecRequestBodyAccess On
     SecRule REQUEST_HEADERS:Content-Type "text/xml" \
          "id:'200000',phase:1,t:none,t:lowercase,pass,nolog,ctl:requestBodyProcessor=XML"
