--- a/blog/httpd/conf.d/marc.cortinasval.cat.conf
+++ b/blog/httpd/conf.d/marc.cortinasval.cat.conf
@@ -1,11 +1,7 @@
-<VirtualHost *:8080>
-
+<VirtualHost *:80>
         ServerName marc.cortinasval.cat
-	ServerAlias static1.cortinasval.cat static2.cortinasval.cat static3.cortinasval.cat static4.cortinasval.cat
-
        #Only in update
-       # SecRuleEngine off
-	Header unset X-Pingback
+        SecRuleEngine off
 	
 	RewriteEngine On	
 
@@ -20,34 +16,21 @@
 	RewriteRule ^/blog/?$ http://marc.cortinasval.cat/blog/en/ [R,L]
 
         Alias /blog /var/www/html
-        #Enabled to optimize marc blog: https://developers.google.com/speed/pagespeed/module/configuration
-        ModPagespeed on
-	ModPagespeedModifyCachingHeaders off
-	ModPagespeedLowercaseHtmlNames on
-	ModPagespeedDisableRewriteOnNoTransform off
-	ModPagespeedXHeaderValue "Powered By mod_pages_speed - 1.8.31.5-4307"
-        ModPagespeedPreserveUrlRelativity on
-        ModPagespeedUseExperimentalJsMinifier on
-	ModPagespeedAllow wildcard_spec
-	ModPagespeedAllow "*"
-	ModPagespeedPreserveUrlRelativity on
+        Alias /reis /var/www/reis
+        Alias /keybase.txt /var/www/keybase.txt
 
-        <Directory "/var/www/html/wp-includes/js/jquery/jquery.js">
-        ModPagespeedDomain http://static1.cortinasval.cat
-	</Directory>
-
+    #<Location /reis>
+    #    Order allow,deny
+    #    Allow from localhost
+    #    Allow from 62.14.212.59
+    #</Location>
         <Directory /var/www/html>
-	ModPagespeedRewriteLevel CoreFilters
-	ModPagespeedEnableFilters rewrite_images            
-
-	    Options FollowSymLinks
+            Options FollowSymLinks
             #AllowOverride Limit Options FileInfo
             AllowOverride None
             DirectoryIndex index.php
             Order allow,deny
             Allow from all
-
-
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} https
@@ -63,28 +46,6 @@ RewriteRule . /index.php [L]
 </IfModule>
 
  </Directory>
-
-ExpiresActive On
-ExpiresByType image/jpg "access plus 1 year"
-ExpiresByType image/jpeg "access plus 1 year"
-ExpiresByType image/gif "access plus 1 year"
-ExpiresByType image/png "access plus 1 year"
-ExpiresByType text/css "access plus 1 month"
-ExpiresByType application/pdf "access plus 1 month"
-ExpiresByType text/x-javascript "access plus 1 month"
-ExpiresByType application/x-javascript "access plus 1 month"
-ExpiresByType application/x-shockwave-flash "access plus 1 month"
-ExpiresByType image/x-icon "access plus 1 year"
-ExpiresByType image/svg+xml "access plus 1 years"
-ExpiresByType application/x-font-ttf "access plus 1 years"
-ExpiresByType application/x-font-truetype "access plus 1 years"
-ExpiresByType application/x-font-opentype "access plus 1 years"
-ExpiresByType application/font-woff "access plus 1 years"
-ExpiresByType application/font-woff2 "access plus 1 years"
-ExpiresByType application/vnd.ms-fontobject "access plus 1 years"
-ExpiresByType application/font-sfnt "access plus 1 years"
-ExpiresByType application/x-font-woff "access plus 1 years"
-
         ErrorLog "|/usr/sbin/rotatelogs -l /var/log/httpd/blog.error.%Y.%m.%d.log 86400"
         CustomLog "|/usr/sbin/rotatelogs -l /var/log/httpd/blog.access.%Y.%m.%d.log 86400" akamai
 
@@ -119,5 +80,18 @@ php_value upload_max_filesize 12M
 </IfModule>
 
 
+    #Enabled to optimize marc blog: https://developers.google.com/speed/pagespeed/module/configuration
+	ModPagespeed on
+	ModPagespeedRespectVary on
+	ModPagespeedDisableRewriteOnNoTransform off
+	ModPagespeedLowercaseHtmlNames on
+	ModPagespeedModifyCachingHeaders off
+	ModPagespeedXHeaderValue "Powered By mod_mcortinas_speed"
+	ModPagespeedPreserveUrlRelativity on
+	ModPagespeedDomain marc.cortinasval.cat
+	ModPagespeedEnableFilters rewrite_javascript
+	ModPagespeedUseExperimentalJsMinifier on
+	ModPagespeedEnableFilters rewrite_css
+	ModPagespeedEnableFilters fallback_rewrite_css_urls
 
 </VirtualHost>
